fix: project structure v2